--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "pino-pretty": "^7.5.3",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0",
+    "sqlite3": "^5.0.2",
     "ts-entry-point": "^1.0.2",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "typeorm": "^0.2.45"
   },
   "scripts": {
     "start": "ts-node src/Main.ts",
