--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ NODE_ENV=development
 RESTAPI_PORT=8000
 RESTAPI_VERSION=v1
 SQLITE_DATABASE=name-of-your-global-database.db
+MIN_CAUSE_PROFIT_PERCENTAJE=50
+MARKETPLACE_PROFIT_PERCENTAJE=10
