--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ RESTAPI_VERSION=v1
 SQLITE_DATABASE=name-of-your-global-database.db
 MIN_CAUSE_PROFIT_PERCENTAJE=50
 MARKETPLACE_PROFIT_PERCENTAJE=10
+AUTH_TOKEN=auth-token
